<resources>
    <string name="app_name">CafeIt</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in_user"><u>Sign up as User</u></string>
    <string name="sign_in_cafe"><u>Sign up as Cafe</u></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_log_in">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_main">MainActivity</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_cafes">Cafes</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_best">Best:</string>
    <string name="title_rating">Rate:</string>
    <string name="title_wifi">Wifi:</string>
    <string name="title_wait">Wait:</string>


    <string name="title_activity_order_view">Place an Order</string>
    <string name="cafe_pic_content">Picture of cafe</string>
    <string name="cafe_name">Nice-Tea Cafe</string>
    <string name="hrs_label">Hours:</string>
    <string name="hrs">7 AM &#8211; 12 AM</string>
    <string name="address1">3200 N Charles St,</string>
    <string name="address2">Baltimore, MD, 21218</string>
    <string name="distance">0.1 mi</string>
    <string name="cafe_open">Open</string>
    <string name="cafe_closed">Closed</string>

    <string name="menu_header">Menu Category</string>
    <string name="menu_item">Menu Item</string>
    <string name="default_count">1</string>
    <string name="minus_content">-1</string>
    <string name="plus_content">+1</string>
    <string-array name="sizes">
        <item>$1.50 (S)</item>
        <item>$2.00 (M)</item>
        <item>$2.25 (L)</item>
    </string-array>
    <string name="no_orders">No items selected!</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_checkout">Checkout</string>
    <string name="your_order">Your Order:</string>
    <string name="order_item">Order Item</string>
    <string name="order_size">(L)</string>
    <string name="sample_price_sz">2.25</string>
    <string name="your_total">Your Total:</string>
    <string name="sample_total">$4.50</string>
    <string name="additional_notes">Additional Notes:</string>
    <string name="notes_hint">Extra ice on Americano, etc.</string>
    <string name="title_activity_cafe_main">CafeMainActivity</string>
    <string name="title_activity_current__order">Current_Order</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="cafe_prof_pic_content">Cafe Profile Picture</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_cafe_new_item">CafeNewItemActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>
