<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alex.cafeit.Checkout"
    android:orientation="vertical"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/CafeName_checkout"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:background="@color/colorPrimaryLight"
            android:gravity="center_vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/cafe_name"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <TextView
            android:id="@+id/your_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/your_order"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CafeName_checkout" />

        <ListView
            android:id="@+id/order_list"
            android:layout_width="0dp"
            android:layout_height="193dp"
            android:layout_marginTop="16dp"
            android:maxHeight="200dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/your_order"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <TextView
            android:id="@+id/your_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="120dp"
            android:layout_marginRight="120dp"
            android:layout_marginTop="16dp"
            android:text="@string/your_total"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_list" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/sample_total"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_list" />

        <TextView
            android:id="@+id/additional_notes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/additional_notes"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/your_total"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/notes"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:background="@color/colorPrimaryLight"
            android:ems="10"
            android:hint="@string/notes_hint"
            android:inputType="textMultiLine"
            android:textSize="14sp"
            android:lines="6"
            android:minLines="4"
            android:maxLines="8"
            android:scrollbars="vertical"
            android:gravity="top|start"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/additional_notes_label"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            android:windowSoftInputMode="adjustResize"
            />
    </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/checkout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bluntOrange"
            android:text="@string/title_activity_checkout"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            />

</LinearLayout>
