<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardCornerRadius="3dp"
    android:layout_margin="5dp"
    android:elevation="4dp"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fillViewport="true"
        android:background="@color/white"
        android:layout_margin="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/card"
            >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/cafe_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:src="@drawable/cafeit_logo"
                />
            <TextView
                android:id="@+id/cafe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textAlignment="center"
                android:text="(cafe_name)"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/cafe_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:textAppearance="?attr/textAppearanceListItem"
                android:text="(cafe_distance)"
                android:textAlignment="center"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="@string/title_best"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                />

                <TextView
                    android:id="@+id/best_menu"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="(Best Menu)"
                    android:layout_weight="1"
                    android:gravity="center|center_vertical"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="@string/title_rating"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|center_vertical"
                    >
                    <RatingBar
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/ratingBarStyleSmall"
                        android:theme="@style/RatingBar"
                        android:numStars="5"
                        android:stepSize="0.1"
                        android:isIndicator="true"
                        android:rating="3"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="@string/title_wifi"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    />

                <TextView
                    android:id="@+id/wifi"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="(wifi)"
                    android:layout_weight="1"
                    android:gravity="center|center_vertical"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="@string/title_wait"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                />

                <TextView
                    android:id="@+id/wait"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="(wait time)"
                    android:layout_weight="1"
                    android:gravity="center|center_vertical"
                    />
            </LinearLayout>

        </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>